syntax = "proto3";

option go_package = "./;remote";
package remote;

service QueryTimeSeriesService {
  rpc Raw(ReadRequest) returns (stream TimeSeries) {};
}

message ReadRequest {
  string clusterName = 1;
  string tagKey = 2;
  string tagValue = 3;
  string db = 4;
  string rp = 5;
  string measurement = 6;
  string field = 7;
  int64 start = 8;
  int64 end = 9;
  string condition = 10;
  int64 limit = 11;
  int64 sLimit = 12;
}

message Sample {
  double value = 1;
  int64 timestamp_ms = 2;
}

message LabelPair {
  string name = 1;
  string value = 2;
}

message TimeSeries {
  repeated LabelPair labels = 1;
  // Sorted by time, oldest sample first.
  repeated Sample samples = 2;
}